--- a/app/frontend/html/templates/en/login.html
+++ b/app/frontend/html/templates/en/login.html
@@ -1,11 +1,11 @@
 <div class="form_container">
     <div class="form_body">
         <p class="form_title">LOGIN</p>
-        <p class="form_label">EMAIL</p>
-        <input class="form_field" type="text"/>
+        <p class="form_label">USERNAME</p>
+        <input id="username" class="form_field" type="text"/>
         <p class="form_label">PASSWORD</p>
-        <input class="form_field" type="password"/>
-        <button class="form_main_button">LOGIN</button>
+        <input id="password" class="form_field" type="password"/>
+        <button class="form_main_button" onclick="login()">LOGIN</button>
         <p class="form_bottom">Don't have an account?</p>
         <a href="#register" class="form_link">Register here</a>
     </div>
