--- a/app/frontend/html/templates/en/login.html
+++ b/app/frontend/html/templates/en/login.html
@@ -5,7 +5,7 @@
         <input id="username" class="form_field" type="text"/>
         <p class="form_label">PASSWORD</p>
         <input id="password" class="form_field" type="password"/>
-        <button class="form_main_button" onclick="login()">LOGIN</button>
+        <button class="form_main_button" onclick="AuthLb.login2fa()">LOGIN</button>
         <p class="form_bottom">Don't have an account?</p>
         <a href="#register" class="form_link">Register here</a>
     </div>
