--- a/app/frontend/html/templates/en/register.html
+++ b/app/frontend/html/templates/en/register.html
@@ -7,7 +7,7 @@
         <input id="email" class="form_field" type="text"/>
         <p class="form_label">PASSWORD</p>
         <input id="password" class="form_field" type="password"/>
-        <button class="form_main_button" onclick="register()">REGISTER</button>
+        <button class="form_main_button" onclick="AuthLb.register()">REGISTER</button>
         <p class="form_bottom">Already have an account?</p>
         <a href="#login" class="form_link">Login here</a>
     </div>
