2fa api working

--- a/app/frontend/html/templates/en/header-loggedin.html
+++ b/app/frontend/html/templates/en/header-loggedin.html
@@ -7,5 +7,5 @@
 </div>
 <div class="h_basic" id="h_tournaments"><a href="#tournaments">TOURNAMENT</a></div>
 <div class="h_basic" id="h_scores"><a href="#scores">SCORES</a></div>
-<div id="h_register"> <a href="#register">PROFILE</a></div>
-<div id="h_login"> <a href="#login">LOGOUT</a></div>
+<div id="h_profile"> <a href="#profile">PROFILE</a></div>
+<div id="h_logout"> <a onclick="AuthLb.logout()">LOGOUT</a></div>
