--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -1,28 +1,10 @@
-/*
-#content {
 
-}
-    */
-
-.template_container {
-    display: flex;
-    flex-direction: row;
-    margin-top: 150px;
-    width: 100%;
-    justify-content: center;
+#content, #content * {
+    color: aliceblue;
 }
 
-.template_body {
-    padding: 8px;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    font-family: "JetBrains Mono";
-    background-color: black;
-    width: 550px;
-    height: 650px;
-    border: 1px solid white;
+#content input, #content input * {
+    color: black !important;
 }
-
 
 /*-------------------*/
