--- a/app/frontend/html/templates/en/home.html
+++ b/app/frontend/html/templates/en/home.html
@@ -13,14 +13,22 @@
     Are you in?
 </div>
 <div id="games_container">
+    <a href="#pong">
     <div class="game_card">
-        <div class="game_image"></div>
+        <div class="game_image">
+            <img src="media/pong.png" alt="Pong">
+        </div>
         <p class="game_title">PONG</p>
         <p class="game_subtitle">Created by: </p>
     </div>
+    </a>
+    <a href="#tictactoe">
     <div class="game_card">
-        <div class="game_image"></div>
+        <div class="game_image">
+            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe">
+        </div>
         <p class="game_title">TIC-TAC-TOE</p>
         <p class="game_subtitle">Created by: </p>
     </div>
+    </a>
 </div>
