router now has an onload option, basic user settings working

--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -4,7 +4,7 @@
 }
 
 #content input, #content input * {
-    color: black !important;
+    color: rgb(84, 255, 255) !important;
 }
 
 /*-------------------*/
