--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -3,8 +3,11 @@
     color: aliceblue;
 }
 
-#content input, #content input * {
+#content input, #content input *,
+#content select, #content select *{
     color: rgb(84, 255, 255) !important;
 }
+
+
 
 /*-------------------*/
