settings language dropdown fix

--- a/app/frontend/html/templates/en/settings.html
+++ b/app/frontend/html/templates/en/settings.html
@@ -16,9 +16,9 @@
         <p class="form_label">Preferred language:</p>
         <div class="form_field_with_button_container">
             <select class="form_field_with_button" id="language_preference">
-                <option value="english">English</option>
-                <option value="spanish">Spanish</option>
-                <option value="french">French</option>
+                <option value="en">English</option>
+                <option value="es">Spanish</option>
+                <option value="fr">French</option>
             </select>
             <button class="form_embedded_submit_button" onclick="submitProfileSettings('language_preference', document.getElementById('language_preference').value)"> -></button>
         </div>
