load profile wip

--- a/app/frontend/html/templates/en/profile.html
+++ b/app/frontend/html/templates/en/profile.html
@@ -1,7 +1,7 @@
 
 <div id="pr_structure">
     <div id="pr_sidebar">
-        <img id="pr_user_image" src="../media/placeholders/CK.jpg">
+        <img id="pr_user_image" src="/media/Profile_avatar_placeholder_large.png">
         <div id="pr_infobox">
             <p id="pr_username">ChaosKing</p>
             <a href="#settings" class="pr_sidebar_link">Editar Perfil</a>
@@ -9,7 +9,7 @@
         </div>
         <div id="pr_friendbox">
             <div class="pr_friend_request_item" id = "pr_friend_request_item_template" style="display: none;">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
+                <img class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
                 <div class="pr_friend_info">
                     <p class="pr_friend_username">NuevoAmigo1</p>
                     <p class="pr_friend_status_on">Conectado</p>
@@ -18,7 +18,7 @@
                 <button class="pr_friend_decline_button">✕</button>
             </div>
             <div class="pr_friend_item" id = "pr_friend_item_template" style="display: none;">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
+                <img class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
                 <div class="pr_friend_info">
                     <p class="pr_friend_username">Amigo1</p>
                     <p class="pr_friend_status_on">Conectado</p>
