--- a/app/frontend/html/templates/en/profile.html
+++ b/app/frontend/html/templates/en/profile.html
@@ -1,4 +1,3 @@
-
 <div id="pr_structure">
     <div id="pr_sidebar">
         <img id="pr_user_image" src="/media/Profile_avatar_placeholder_large.png">
@@ -8,21 +7,21 @@
             <p id="pr_friend_count">Amigos <span class="pr_highlight">7</span></p>
         </div>
         <div id="pr_friendbox">
-            <div class="pr_friend_request_item" id = "pr_friend_request_item_template" style="display: none;">
-                <img class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
-                <div class="pr_friend_info">
-                    <p class="pr_friend_username">NuevoAmigo1</p>
-                    <p class="pr_friend_status_on">Conectado</p>
-                </div>
-                <button class="pr_friend_accept_button">✓</button>
-                <button class="pr_friend_decline_button">✕</button>
+            <div class="pr_friend_request_item" id="request_template" style="display: none;">
+                    <img id="img_template" class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
+                    <div class="pr_friend_info">
+                        <p id="friend_username_template" class="pr_friend_username">NuevoAmigo1</p>
+                        <p id="friend_status_template" class="pr_friend_status_on">Conectado</p>
+                    </div>
+                    <button class="pr_friend_accept_button">✓</button>
+                    <button class="pr_friend_decline_button">✕</button>
             </div>
-            <div class="pr_friend_item" id = "pr_friend_item_template" style="display: none;">
-                <img class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
-                <div class="pr_friend_info">
-                    <p class="pr_friend_username">Amigo1</p>
-                    <p class="pr_friend_status_on">Conectado</p>
-                </div>
+            <div class="pr_friend_item" id="friend_template" , style="display: none;">
+                    <img id="img_template" class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
+                    <div class="pr_friend_info">
+                        <p id="friend_username_template" class="pr_friend_username">Amigo1</p>
+                        <p id="friend_status_template" class="pr_friend_status_on">Conectado</p>
+                    </div>
             </div>
         </div>
     </div>
