--- a/app/frontend/html/templates/en/login.html
+++ b/app/frontend/html/templates/en/login.html
@@ -1,11 +1,14 @@
+
 <div class="form_container">
     <div class="form_body">
         <p class="form_title">LOGIN</p>
-        <p class="form_label">USERNAME</p>
-        <input id="username" class="form_field" type="text"/>
-        <p class="form_label">PASSWORD</p>
-        <input id="password" class="form_field" type="password"/>
-        <button class="form_main_button" onclick="AuthLb.login2fa()">LOGIN</button>
+        <form id="loginForm" onsubmit="event.preventDefault(); AuthLb.login2fa();">
+            <p class="form_label">USERNAME</p>
+            <input id="username" class="form_field" type="text" required/>
+            <p class="form_label">PASSWORD</p>
+            <input id="password" class="form_field" type="password" required/>
+            <button type="submit" class="form_main_button">LOGIN</button>
+        </form>
         <p class="form_bottom">Don't have an account?</p>
         <a href="#register" class="form_link">Register here</a>
     </div>
