--- a/app/frontend/html/templates/en/register.html
+++ b/app/frontend/html/templates/en/register.html
@@ -1,13 +1,17 @@
+
+
 <div class="form_container">
     <div class="form_body_xl">
         <p class="form_title">REGISTER</p>
-        <p class="form_label">NAME</p>
-        <input id="username" class="form_field" type="text"/>
-        <p class="form_label">EMAIL</p>
-        <input id="email" class="form_field" type="text"/>
-        <p class="form_label">PASSWORD</p>
-        <input id="password" class="form_field" type="password"/>
-        <button class="form_main_button" onclick="AuthLb.register()">REGISTER</button>
+        <form id="registerForm" onsubmit="event.preventDefault(); AuthLb.register();">
+            <p class="form_label">NAME</p>
+            <input id="username" class="form_field" type="text" required/>
+            <p class="form_label">EMAIL</p>
+            <input id="email" class="form_field" type="text" required/>
+            <p class="form_label">PASSWORD</p>
+            <input id="password" class="form_field" type="password" required/>
+            <button type="submit" class="form_main_button">REGISTER</button>
+        </form>
         <p class="form_bottom">Already have an account?</p>
         <a href="#login" class="form_link">Login here</a>
     </div>
