--- a/app/frontend/html/templates/en/settings.html
+++ b/app/frontend/html/templates/en/settings.html
@@ -29,13 +29,20 @@
         <button class="form_settings_button" onclick="showItem('delete_confirmation_overlay')">Delete account [!]</button>
         <a href="#profile"><button class="form_main_button">Back</button></a>
 
-                <!-- Delete Account Confirmation Overlay -->
+        <!-- Delete Account Confirmation Overlay -->
         <div id="delete_confirmation_overlay" class="overlay" style="display: none;">
-            <div class="overlay_content">
+            <div class="overlay_delete">
                 <p>Are you sure you want to delete your account? This action cannot be undone.</p>
                 <button class="form_settings_button" onclick="deleteAccount()">Delete</button>
                 <button class="form_settings_button" onclick="hideItem('delete_confirmation_overlay')">Cancel</button>
             </div>
         </div>
+        <!-- Anonymizew Account Confirmation Overlay  -->
+        <div id="anonymize_confirmation_overlay" class="overlay" style="display: none;">
+            <div class="overlay_content">
+                <p>Are you sure you want to anonymize your account? This action cannot be undone.</p>
+                <button class="form_settings_button" onclick="anonymizeAccount()">Anonymize</button>
+                <button class="form_settings_button" onclick="hideItem('anonymize_confirmation_overlay')">Cancel</button>
+            </div>
     </div>
 </div>
