--- a/app/frontend/css/styles.css
+++ b/app/frontend/css/styles.css
@@ -50,6 +50,19 @@ a {
     margin-left: 25px;
     margin-right: 25px;
 }
+
+.h_flag {
+    width: 100%;
+    height: 100%;
+}
+
+.h_flag_button {
+    margin: 0;
+    border: none;
+    appearance: none;
+    background-color: inherit;
+}
+
 .game_card {
     display: flex;
     flex-direction: column;
@@ -117,7 +130,7 @@ a {
     height: 750px;
     border: 1px solid white;
 }
-.form_body_xs {
+.form_body_xxl {
     display: flex;
     flex-direction: column;
     color: white;
@@ -129,6 +142,17 @@ a {
     margin-bottom: 20px;
 }
 
+.form_body_xs {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-family: "JetBrains Mono";
+    background-color: black;
+    width: 550px;
+    height: 600px;
+    border: 1px solid white;
+    margin-bottom: 20px;
+}
 .form_title {
     font-weight: bold;
     font-size: 16pt;
@@ -139,6 +163,18 @@ a {
 .form_field {
     font-size: 16pt;
     width: 75%;
+    margin-left: 12.5%;
+    color: white;
+    padding: 8px;
+    padding-left: 12px;
+    border: 1px solid white;
+    background-color: black;
+}
+
+.form_field_with_margin {
+    font-size: 16pt;
+    width: 75%;
+    margin-top: 20px;
     margin-left: 12.5%;
     color: white;
     padding: 8px;
@@ -221,6 +257,29 @@ a {
     border-color: #ff4eff;
     border-width: 1px;
     background-color: #ff4eff;
+}
+
+.form_main_button:hover {
+    background-color: #f095f2;
+    border-color: #f095f2;
+}
+
+.form_main_button_reduced_margin {
+    font-size: 16pt;
+    width: 75%;
+    margin-left: 12.5%;
+    margin-top: 25px;
+    padding: 8px;
+    color: white;
+    border-style: solid;
+    border-color: #ff4eff;
+    border-width: 1px;
+    background-color: #ff4eff;
+}
+
+.form_main_button_reduced_margin:hover {
+    background-color: #f095f2;
+    border-color: #f095f2;
 }
 
 .form_main_button:hover {
@@ -585,6 +644,18 @@ a {
     border-color: #78a4bc;
 }
 
+.tour_create_subscroll::-webkit-scrollbar {
+    display: none;
+}
+
+.tour_create_subscroll {
+    color: white;
+    overflow-y: scroll;
+    height: 390px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 #bg_video {
     position: fixed;
     right: 0;
@@ -645,6 +716,20 @@ a {
 #h_login:hover {
     background-color: #f095f2;
     border-color: #f095f2;
+}
+
+#h_flag_container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 150px;
+}
+
+#h_logout {
+    height: 25px;
+    width: 25px;
+    margin-bottom: 3px;
+    margin-right: 10px;
 }
 
 #splash_panel {
