anonymize settings confirmation overlay

--- a/app/frontend/html/templates/en/settings.html
+++ b/app/frontend/html/templates/en/settings.html
@@ -25,7 +25,7 @@
         
         <button class="form_settings_button">Change profile picture</button>
         <a href="friend_list_editor.html"><button class="form_settings_button">Add/Remove friends</button></a>
-        <button class="form_settings_button">Anonymize account</button>
+        <button class="form_settings_button" onclick="showItem('anonymize_confirmation_overlay')">Anonymize account</button>
         <button class="form_settings_button" onclick="showItem('delete_confirmation_overlay')">Delete account [!]</button>
         <a href="#profile"><button class="form_main_button">Back</button></a>
 
@@ -39,10 +39,11 @@
         </div>
         <!-- Anonymizew Account Confirmation Overlay  -->
         <div id="anonymize_confirmation_overlay" class="overlay" style="display: none;">
-            <div class="overlay_content">
+            <div class="overlay_anonymize">
                 <p>Are you sure you want to anonymize your account? This action cannot be undone.</p>
                 <button class="form_settings_button" onclick="anonymizeAccount()">Anonymize</button>
                 <button class="form_settings_button" onclick="hideItem('anonymize_confirmation_overlay')">Cancel</button>
             </div>
+        </div>
     </div>
 </div>
