fixed settings class

--- a/app/frontend/html/templates/en/settings.html
+++ b/app/frontend/html/templates/en/settings.html
@@ -1,5 +1,5 @@
 <div class="form_container">
-    <div class="form_body_xs">
+    <div class="form_body_xxl">
         <p class="form_title">Profile Options</p>
         <div class="form_field_with_button_container">
             <input class="form_field_with_button" placeholder="Change name" type="text" id="username"/>
