--- a/app/frontend/html/templates/en/profile.html
+++ b/app/frontend/html/templates/en/profile.html
@@ -4,7 +4,7 @@
         <div id="pr_infobox">
             <p id="pr_username">ChaosKing</p>
             <a href="#settings" class="pr_sidebar_link">Editar Perfil</a>
-            <p id="pr_friend_count">Amigos <span class="pr_highlight">7</span></p>
+            <p id="pr_friend_count">Amigos <span class="pr_highlight" id="pr_friend_count_number">0</span></p>
         </div>
         <div id="pr_friendbox">
             <div class="pr_friend_request_item" id="request_template" style="display: none;">
@@ -13,8 +13,8 @@
                         <p id="friend_username_template" class="pr_friend_username">NuevoAmigo1</p>
                         <p id="friend_status_template" class="pr_friend_status_on">Conectado</p>
                     </div>
-                    <button class="pr_friend_accept_button">✓</button>
-                    <button class="pr_friend_decline_button">✕</button>
+                    <button id="accept-template" class="pr_friend_accept_button" onclick="acceptFriendRequest(this, 'accept')">✓</button>
+                    <button id="decline-template" class="pr_friend_decline_button" onclick="acceptFriendRequest(this, 'reject')">✕</button>
             </div>
             <div class="pr_friend_item" id="friend_template" , style="display: none;">
                     <img id="img_template" class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
