new header integration

--- a/app/frontend/html/templates/en/header.html
+++ b/app/frontend/html/templates/en/header.html
@@ -1,11 +1,13 @@
-<div id="h_logo"><a id="logo_link_override" href="#" data-route="/">TRANSCENDENCE.</a></div>
-<!-- --------------- -->
-<div class="language_switcher_container" id="languageSwitcher">
-<button class="language-switcher" data-lang="en">EN</button>
-<button class="language-switcher" data-lang="es">ES</button>
-<button class="language-switcher" data-lang="fr">FR</button>
+
+<div class="tr_header">
+    <div id="h_logo_container"><a href="#"><img id="h_logo" src="../media/Transcendence_Logo.svg"></a></div>
+    <div id="h_flag_container">
+        <button class="h_flag_button"><img class="h_flag" src="../media/spanish_flag.svg" data-lang="es"></button>
+        <button class="h_flag_button"><img class="h_flag" src="../media/uk_flag.svg" data-lang="en"></button>
+        <button class="h_flag_button"><img class="h_flag" src="../media/french_flag.svg" data-lang="fr"></button>
+    </div>
+    <a href="#tournaments"><div class="h_basic">TOURNAMENTS</div></a>
+    <a href="#scores"><div class="h_basic">SCOREBOARD</div></a>
+    <a href="#register"><div id="h_register">SIGNUP</div></a>
+    <a href="#login"><div id="h_login">LOGIN</div></a>
 </div>
-<div class="h_basic" id="h_tournaments"><a href="#tournaments">TOURNAMENT</a></div>
-<div class="h_basic" id="h_scores"><a href="#scores">SCORES</a></div>
-<div id="h_register"> <a href="#register">REGISTER</a></div>
-<div id="h_login"> <a href="#login">LOGIN</a></div>
