temporary use of english for all languages for testing

--- a/app/frontend/html/templates/es0/header.html
+++ b/app/frontend/html/templates/es0/header.html
@@ -1,4 +1,3 @@
-
 <div class="tr_header">
     <div id="h_logo_container"><a href="#"><img id="h_logo" src="../media/Transcendence_Logo.svg"></a></div>
     <div id="h_flag_container">
@@ -6,8 +5,8 @@
         <button class="h_flag_button"><img class="h_flag" src="../media/uk_flag.svg" data-lang="en"></button>
         <button class="h_flag_button"><img class="h_flag" src="../media/french_flag.svg" data-lang="fr"></button>
     </div>
-    <a href="#tournaments"><div class="h_basic">TOURNAMENTS</div></a>
-    <a href="#scores"><div class="h_basic">SCOREBOARD</div></a>
-    <a href="#register"><div id="h_register">SIGNUP</div></a>
-    <a href="#login"><div id="h_login">LOGIN</div></a>
+    <a href="#tournaments"><div class="h_basic">TORNEOS</div></a>
+    <a href="#scores"><div class="h_basic">TABLERO DE PUNTUACIONES</div></a>
+    <a href="#register"><div id="h_register">REGISTRARSE</div></a>
+    <a href="#login"><div id="h_login">INICIAR SESIÓN</div></a>
 </div>
