--- a/app/frontend/html/templates/es0/home.html
+++ b/app/frontend/html/templates/es0/home.html
@@ -2,33 +2,25 @@
     <a href="#register"><div id="splash_subtitle">¡Demuestra tu habilidad!</div></a>
 </div>
 <div id="splash_center_panel">
-    Únete ahora y comienza a jugar. ¡Diversión y<br>competencia te esperan!
+    Unete ahora y empieza a jugar. ¡La diversión y la<br>competición te esperan!
 </div>
 <div id="games_header">
     <b>Conoce nuestros juegos</b>
 </div>
 <div id="games_textbox">
-    ¡Aquí es donde se encuentran los verdaderos jugadores! Dos juegos, infinitas<br>
+    ¡Aquí es donde los verdaderos jugadores se encuentran! Dos juegos, infinitas<br>
     posibilidades de hacer amigos, compartir estrategias y, por supuesto, ganar.<br>
     ¿Te unes?
 </div>
 <div id="games_container">
-    <a href="#pong">
     <div class="game_card">
-        <div class="game_image">
-            <img src="media/pong.png" alt="Pong">
-        </div>
+        <div class="game_image"></div>
         <p class="game_title">PONG</p>
         <p class="game_subtitle">Creado por: </p>
     </div>
-    </a>
-    <a href="#tictactoe">
     <div class="game_card">
-        <div class="game_image">
-            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe">
-        </div>
+        <div class="game_image"></div>
         <p class="game_title">TIC-TAC-TOE</p>
         <p class="game_subtitle">Creado por: </p>
     </div>
-    </a>
 </div>
