--- a/app/frontend/html/templates/fr/footer.html
+++ b/app/frontend/html/templates/fr/footer.html
@@ -1,7 +1,7 @@
-<img id="footer_logo" src="../media/Trascendence_Square_Logo.svg">
-<p id="footer_credits">FT_Trascendence a été créé par l'équipe [NOM] pour 42 Málaga.<br><br>
-[NOM 1] - [RÔLE]<br>
-[NOM 2] - [RÔLE]<br>
-[NOM 3] - [RÔLE]<br>
-[NOM 4] - [RÔLE]<br>
-[NOM 5] - [RÔLE]</p>
+<img id="footer_logo" src="media/logo.svg">
+<p id="footer_credits">FT_Transcendence has been created by the team [NOMBRE] for 42 Málaga.<br><br>
+[NAME 1] - [JOB PERFORMED]<br>
+[NAME 2] - [JOB PERFORMED]<br>
+[NAME 3] - [JOB PERFORMED]<br>
+[NAME 4] - [JOB PERFORMED]<br>
+[NAME 5] - [JOB PERFORMED]</p>
