--- a/app/frontend/html/templates/es/2fa.html
+++ b/app/frontend/html/templates/es/2fa.html
@@ -1,15 +1,13 @@
 
 <div class="form_container">
     <div class="form_body">
-        <p class="form_title">LOGIN</p>
-        <form id="loginForm" onsubmit="event.preventDefault(); AuthLb.login2fa();">
+        <p class="form_title">Login 2FA</p>
+        <form id="loginForm" onsubmit="event.preventDefault(); AuthLb.verify2fa();">
             <p class="form_label">USERNAME</p>
             <input id="username" class="form_field" type="text" required/>
             <p class="form_label">PASSWORD</p>
-            <input id="password" class="form_field" type="password" required/>
+            <input id="otp" class="form_field" type="password" required/>
             <button type="submit" class="form_main_button">LOGIN</button>
         </form>
-        <p class="form_bottom">Don't have an account?</p>
-        <a href="#register" class="form_link">Register here</a>
     </div>
 </div>
