--- a/app/frontend/html/templates/es/footer.html
+++ b/app/frontend/html/templates/es/footer.html
@@ -1,7 +1,7 @@
-<img id="footer_logo" src="../media/Trascendence_Square_Logo.svg">
-<p id="footer_credits">FT_Trascendence ha sido creado por el equipo [NOMBRE] para 42 Málaga.<br><br>
-[NOMBRE 1] - [TRABAJO DESEMPEÑADO]<br>
-[NOMBRE 2] - [TRABAJO DESEMPEÑADO]<br>
-[NOMBRE 3] - [TRABAJO DESEMPEÑADO]<br>
-[NOMBRE 4] - [TRABAJO DESEMPEÑADO]<br>
-[NOMBRE 5] - [TRABAJO DESEMPEÑADO]</p>
+<img id="footer_logo" src="media/logo.svg">
+<p id="footer_credits">FT_Transcendence has been created by the team [EFDLC] for 42 Málaga.<br><br>
+[NAME 1] - [JOB PERFORMED]<br>
+[NAME 2] - [JOB PERFORMED]<br>
+[NAME 3] - [JOB PERFORMED]<br>
+[NAME 4] - [JOB PERFORMED]<br>
+[NAME 5] - [JOB PERFORMED]</p>
