--- a/app/frontend/html/templates/es/tournaments.html
+++ b/app/frontend/html/templates/es/tournaments.html
@@ -1,12 +1,11 @@
 <div class="template_container">
-    <div class="template_body">
-        <h>Torneos</h>
-        <p>¡Aquí es donde se encuentran los verdaderos jugadores! Dos juegos, infinitas posibilidades para hacer amigos, compartir estrategias y, por supuesto, ganar. ¿Estás dentro?</p>
-        <ul>
-            <li>Juego 1: <a href="placeholder">Juego 1</a></li>
-            <li>Juego 2: <a href="placeholder">Juego 2</a></li>
-            <li>Juego 3: <a href="placeholder">Juego 3</a></li>
-            <li>Juego 4: <a href="placeholder">Juego 4</a></li>
-        </ul>
-    </div> 
+    <div class="tournament_left">
+        <!-- 4 players in pairs -->
+    </div>
+    <div class="tournament_center">
+        <!-- 4 players in pairs -->
+    <div class="tournament_right">
+        <!-- 4 players in pairs -->
+        
+    </div>
 </div>
