--- a/app/frontend/html/templates/fr/home.html
+++ b/app/frontend/html/templates/fr/home.html
@@ -1,26 +1,34 @@
-<div id="splash_panel"><b>Deux jeux.<br>Des millions de<br>possibilités.</b>
-    <a href="#register"><div id="splash_subtitle">Montrez votre compétence!</div></a>
+<div id="splash_panel"><b>Two games.<br>Millions of<br>possibilities.</b>
+    <a href="#register"><div id="splash_subtitle">Show your skill!</div></a>
 </div>
 <div id="splash_center_panel">
-    Rejoignez-nous maintenant et commencez à jouer. Amusement et<br>compétition vous attendent!
+    Join now and start playing. Fun and<br>competition await you!
 </div>
 <div id="games_header">
-    <b>Découvrez nos jeux</b>
+    <b>Get to know our games</b>
 </div>
 <div id="games_textbox">
-    C'est ici que les vrais joueurs se rencontrent! Deux jeux, des possibilités<br>
-    infinies de se faire des amis, de partager des stratégies et, bien sûr, de gagner.<br>
-    Vous êtes partant?
+    This is where true players meet! Two games, infinite<br>
+    possibilities to make friends, share strategies, and of course, win.<br>
+    Are you in?
 </div>
 <div id="games_container">
+    <a href="#pong">
     <div class="game_card">
-        <div class="game_image"></div>
+        <div class="game_image">
+            <img src="media/pong.png" alt="Pong">
+        </div>
         <p class="game_title">PONG</p>
-        <p class="game_subtitle">Créé par: </p>
+        <p class="game_subtitle">Created by: </p>
     </div>
+    </a>
+    <a href="#tictactoe">
     <div class="game_card">
-        <div class="game_image"></div>
+        <div class="game_image">
+            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe">
+        </div>
         <p class="game_title">TIC-TAC-TOE</p>
-        <p class="game_subtitle">Créé par: </p>
+        <p class="game_subtitle">Created by: </p>
     </div>
+    </a>
 </div>
