--- a/app/frontend/html/templates/fr/tournaments.html
+++ b/app/frontend/html/templates/fr/tournaments.html
@@ -1,12 +1,11 @@
 <div class="template_container">
-    <div class="template_body">
-        <h>Tournaments</h>
-        <p>This is where the real players meet! Two games, endless possibilities to make friends, share strategies and, of course, win. Are you in?</p>
-        <ul>
-            <li>Game 1: <a href="placeholder">Game 1</a></li>
-            <li>Game 2: <a href="placeholder">Game 2</a></li>
-            <li>Game 3: <a href="placeholder">Game 3</a></li>
-            <li>Game 4: <a href="placeholder">Game 4</a></li>
-        </ul>
-    </div> 
+    <div class="tournament_left">
+        <!-- 4 players in pairs -->
+    </div>
+    <div class="tournament_center">
+        <!-- 4 players in pairs -->
+    <div class="tournament_right">
+        <!-- 4 players in pairs -->
+        
+    </div>
 </div>
