added timeout to alerts

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -38,6 +38,10 @@
     Already logged out
 </div>
 
+<div class="alert alert-danger" role="alert" id="login-error" onclick="hideAlert(this)" style="display: none;">
+    Could not log in
+</div>
+
 <div class="alert alert-info" role="alert" id="Profile-updated" onclick="hideAlert(this)" style="display: none;">
     Profile updated successfully
 </div>
