anonymize succes alert

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -54,6 +54,13 @@
     Invalid language preference
 </div>
 
+<div class="alert alert-danger" role="alert" id="Unauthorized" onclick="hideAlert(this)" style="display: none;">
+    Unauthorized
+</div>
+
+<div class="alert alert-info" role="alert" id="Account-anonymized-succes" onclick="hideAlert(this)" style="display: none;">
+    Account anonymized successfully
+</div>
 
 
 
