changed css for alerts, now they have a fixed position

--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -58,4 +58,9 @@
 
 .alert {
     z-index: 1000;
+    position: fixed; /* or fixed if you want it to be relative to the viewport */
+    top: 25%; /* Adjust as needed */
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%); /* Center horizontally */
+    width: 100%; /* Adjust as needed */
 }
