--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -62,6 +62,25 @@
     Account anonymized successfully
 </div>
 
+<div class="alert alert-danger" role="alert" id="self-request" onclick="hideAlert(this)" style="display: none;">
+    Cannot send a request to yourself
+</div>
+
+<div class="alert alert-danger" role="alert" id="request-sent" onclick="hideAlert(this)" style="display: none;">
+    Request already sent
+</div>
+
+<div class="alert alert-danger" role="alert" id="alredy-friends" onclick="hideAlert(this)" style="display: none;">
+    Your are already friends
+</div>
+
+<div class="alert alert-info" role="alert" id="request-sent" onclick="hideAlert(this)" style="display: none;">
+    Request sent
+</div>
+
+<div class="alert alert-danger" role="alert" id="Friendship-does-not-exist" onclick="hideAlert(this)" style="display: none;">
+    Friendship does not exist
+</div>
 
 
 
